<?xml version="1.0"?>
<package>
  <name>ros_twitter_bootstrap</name>
  <version>3.0.2</version>
  <description>The ros_twitter_bootstrap package</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://getbootstrap.com</url>


  <buildtool_depend>catkin</buildtool_depend>

</package>