<?xml version="1.0"?>
<package>
  <name>twitter_bootstrap</name>
  <version>3.0.2</version>
  <description>This package contains the source for Bootstrap and exposes it to catkin in a way that makes it useable within ROS nodes which create webpages. All code under bootstrap is licensed and authored according to the original documentation of that package. </description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <url type="website">http://getbootstrap.com</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>